<?xml version="1.0"?>
<package>
    <name>calibration_publisher</name>
    <version>1.10.0</version>
    <description>The calibration_camera_lidar package</description>
    <maintainer email="syoshida@axe.bz">Syohei YOSHIDA</maintainer>
    <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend> 
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_generation</run_depend> 
    <run_depend>dynamic_reconfigure</run_depend>
</package>
